--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,10 @@
       <h3>Satisfactory Score</h3>
       <canvas id="oceaniaSatisfactionChart"></canvas>
     </article>
+    <article class="card">
+      <h3>Lead Source</h3>
+      <canvas id="oceaniaLeadSourceChart"></canvas>
+    </article>
   </section>
 
   <!-- 🌍 EUROPE INSIGHTS -->
@@ -90,6 +94,10 @@
       <h3>Satisfactory Score</h3>
       <canvas id="europeSatisfactionChart"></canvas>
     </article>
+    <article class="card">
+      <h3>Lead Source</h3>
+      <canvas id="europeLeadSourceChart"></canvas>
+    </article>
   </section>
 
   <!-- 🌏 ASIA-PACIFIC INSIGHTS -->
@@ -124,6 +132,10 @@
     <article class="card">
       <h3>Satisfactory Score</h3>
       <canvas id="asiaSatisfactionChart"></canvas>
+    </article>
+    <article class="card">
+      <h3>Lead Source</h3>
+      <canvas id="asiaLeadSourceChart"></canvas>
     </article>
   </section>
 
