--- a/templates/index.html
+++ b/templates/index.html
@@ -139,8 +139,8 @@
       <canvas id="asiaLeadSourceChart"></canvas>
     </article>
   </section>
-
-
-  <script src="/static/main.js"></script>
+<!-- Load Monday SDK before main.js -->
+<script src="https://unpkg.com/monday-sdk-js/dist/main.js"></script>
+<script src="/static/main.js"></script>
 </body>
 </html>
