--- a/templates/index.html
+++ b/templates/index.html
@@ -39,10 +39,10 @@
       <h3>Negative Items</h3>
       <ul id="oceaniaNegativeList"></ul>
     </article>
-    <article class="card">
+<!--     <article class="card">
        <h3>Actionable Strategies</h3>
        <ul id="oceaniaActionableList"></ul>
-    </article>
+    </article> -->
     <!-- Example placeholder charts for Oceania -->
     <article class="card">
       <h3>Age Group Purchases</h3>
@@ -78,10 +78,10 @@
       <h3>Negative Items</h3>
       <ul id="europeNegativeList"></ul>
     </article>
-    <article class="card">
+    <!--     <article class="card">
       <h3>Actionable Strategies</h3>
       <ul id="europeActionableList"></ul>
-    </article>
+    </article> -->
     <!-- Charts -->
     <article class="card">
       <h3>Age Group Purchases</h3>
@@ -117,10 +117,10 @@
       <h3>Negative Items</h3>
       <ul id="asiaNegativeList"></ul>
     </article>
-    <article class="card">
+<!--     <article class="card">
       <h3>Actionable Strategies</h3>
       <ul id="asiaActionableList"></ul>
-    </article>
+    </article> -->
     <!-- Charts -->
     <article class="card">
       <h3>Age Group Purchases</h3>
